--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,6 +50,8 @@
      <Compile Include="Assets\Scripts\GUI\TitleScreenGUI.cs" />
      <Compile Include="Assets\Scripts\Platform\PlatformTrigger.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Zombie\ZombieSpawnerTrigger.cs" />
+     <Compile Include="Assets\Scripts\Zombie\ZombieTrigger.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/dev/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
