--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,7 +51,8 @@
      <Compile Include="Assets\Scripts\GUI\TitleScreenGUI.cs" />
      <Compile Include="Assets\Scripts\Level\Level01EndTrigger.cs" />
      <Compile Include="Assets\Scripts\Platform\PlatformTrigger.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\Player\BulletBehavior.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerBehavior.cs" />
      <Compile Include="Assets\Scripts\Zombie\ZombieSpawnerTrigger.cs" />
      <Compile Include="Assets\Scripts\Zombie\ZombieTrigger.cs" />
  <Reference Include="UnityEngine.UI">
