--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -6,7 +6,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{0FD1845C-C505-90A2-E649-117B47AF3C1B}</ProjectGuid>
+    <ProjectGuid>{500E2D42-ACA8-3E69-95CB-6A20B7A6E859}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -38,10 +38,10 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="UnityEngine">
-      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+      <HintPath>E:/dev/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
-      <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+      <HintPath>E:/dev/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\GUI\Level01GUI.cs" />
      <Compile Include="Assets\Scripts\GUI\PhoneScene.cs" />
      <Compile Include="Assets\Scripts\GUI\TitleScreenGUI.cs" />
+     <Compile Include="Assets\Scripts\Global\GlobalState.cs" />
      <Compile Include="Assets\Scripts\Items\ItemTrigger.cs" />
      <Compile Include="Assets\Scripts\Level\LabEnterRoom.cs" />
      <Compile Include="Assets\Scripts\Level\Level01EndTrigger.cs" />
@@ -66,10 +67,10 @@
      <Compile Include="Assets\Scripts\Zombie\ZombieBehaviour.cs" />
      <Compile Include="Assets\Scripts\Zombie\ZombieSpawnerTrigger.cs" />
  <Reference Include="UnityEngine.UI">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
+ <HintPath>E:/dev/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
+ <HintPath>E:/dev/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
